hphp/test/zend/good/ext/gettext/tests/gettext_dngettext-wrongparams.php.skipif
<?php
if (!extension_loaded("gettext")) {
    die("skip gettext extension is not loaded.\n");
}
if (!setlocale(LC_ALL, 'en_US.UTF-8')) {
    die("skip en_US.UTF-8 locale not supported.");
}