hphp/test/zend/bad/ext/sockets/tests/socket_select-wrongparams-1-win32.php.skipif
<?php
if (substr(PHP_OS, 0, 3) != 'WIN') {
	die('skip.. Not valid for non Windows');
}
if (!extension_loaded('sockets')) {
    die('SKIP The sockets extension is not loaded.');
}